chore(format): linter formatting for metadata and notes
Automated formatting improvements:
- metadata.yaml: added last_updated timestamp (2025-10-31T11:21:35Z)
- notes.md: markdown formatting (blank lines after headers)

--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -7,6 +7,7 @@ task:
   owner: "Claude Code Agent + Rust Dev 2"
   status: in_progress
   start_date: "2025-10-31"
+  last_updated: 2025-10-31T11:21:35Z
   estimated_hours: 32  # 4 days × 8 hours
   actual_hours: 1.8  # Day 1 Session 01: 1.2h, Session 02 Threads 01-03: ~0.6h research
 
