init(session): T-02-02 Day 1 Session 03 - Phase 1 Upper Index Implementation kickoff
Initialized Session 03 for Phase 1 (Upper Index) implementation:

RAW log created:
- WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt
- Session start: 11:33 UTC
- Expected duration: 4-6 hours
- Planned threads: NameIndex design, prefix matching, graph integration

Implementation checklist prepared:
- [ ] Create name_index.rs module
- [ ] Implement NameIndexBuilder with DashMap
- [ ] Implement exact_match() and prefix_match() queries
- [ ] Add entity type filtering
- [ ] Wire CodeGraph integration
- [ ] Create unit tests (>95% coverage target)
- [ ] Add benchmarks (<10ms prefix query target)

Metadata updated:
- Added Session 03 to Work Sessions section
- Updated worklog.raw with Session 03 RAW log path
- Status: 🚧 IN PROGRESS (Thread 01 pending start)

Phase 1 Objective: Implement upper-tier name/ID HashMap with:
- Exact match (O(log n) binary search)
- Prefix match (<10ms latency)
- Type-based filtering
- Graph entity integration

Ready to begin Phase 1 implementation!

--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -102,12 +102,13 @@ notes: |
 
   - Day 1 Session 03: [Phase 1] Upper Index Implementation (Threads 01-XX)
     * Phase--Session: Executing Phase 1 (Upper Index) implementation
-    * Thread 01: NameIndex design & exact match
-    * Thread 02: Prefix match & type filtering
-    * Thread 03: Graph integration & benchmarks
+    * Thread 01: NameIndex design & exact match (planned)
+    * Thread 02: Prefix match & type filtering (planned)
+    * Thread 03: Graph integration & benchmarks (planned)
     * Expected: ~4-6 hours, name_index.rs + tests
-    * RAW: WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt (will be created when Thread 01 begins)
-    * Status: NOT STARTED
+    * RAW: WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt (created at 11:33 UTC)
+    * Start Time: 11:33 UTC
+    * Status: 🚧 IN PROGRESS (Thread 01 pending start)
 
   Technical risks:
   - Tokenization mismatch with LocAgent
@@ -129,6 +130,7 @@ worklog:
       raw:
         - "./worklogs/raw/WORK-SESSIONS-01-THREADS-01-03-SUMMARY-2025-10-31.txt"
         - "./worklogs/raw/WORK-SESSIONS-02-THREADS-01-03-SUMMARY-2025-10-31.txt"
+        - "./worklogs/raw/WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt"
 
 metrics:
   lines_added: 1450   # 4f834f6: +62, 5eb24a3: +1,388
