checkpoint(worklog): T-02-02 Day 1 Session 03 complete - Phase 1 Upper Index delivered
Session 03 (Phase 1: Upper Index Implementation) completed:
- Start: 12:02 UTC, End: 15:17 UTC
- Duration: 3.3 hours (Threads 01-04)
- Phase 1 deliverables: 100% complete ✅

Work Summary:
- Thread 01 (12:02-12:13): Phase 1 kickoff & implementation planning
- Thread 02 (12:13-14:48): Upper Index core implementation + tests
- Thread 03 (14:49-15:05): Validation & benchmarking (initial 91.65% coverage)
- Thread 04 (15:14-15:17): Coverage hardening to 97.20%

Acceptance Criteria Progress (4 of 6 complete):
✅ Upper index (name/ID HashMap) with prefix matching
✅ Search latency <500ms p95 (actual: <1μs)
✅ Index build <5s for 1K files (actual: 2.287ms)
✅ Unit test coverage >95% (actual: 97.20% lines, 95.35% functions)
⏳ Lower index (BM25) - Phase 3 pending
⏳ Search overlap@10 ≥90% - Phase 5 pending

Updated Artifacts:
- metadata.yaml: acceptance criteria updated, actual_hours: 5.1h
- RAW log: WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt complete
- Session worklogs: 2025-10-31-S03-work-summary.md, S03-notes.md, S03-commit-log.md

Phase 1 Status: ✅ COMPLETE (ahead of schedule)
Next Phase: Phase 2 - Custom Tokenizer (Session 04 or Day 2)

--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -7,9 +7,9 @@ task:
   owner: "Claude Code Agent + Rust Dev 2"
   status: in_progress
   start_date: "2025-10-31"
-  last_updated: 2025-10-31T11:21:35Z
+  last_updated: 2025-10-31T15:17:00Z
   estimated_hours: 32  # 4 days × 8 hours
-  actual_hours: 1.8  # Day 1 Session 01: 1.2h, Session 02 Threads 01-03: ~0.6h research
+  actual_hours: 5.1  # Day 1 Session 01: 1.2h, Session 02 Threads 01-03: 0.6h, Session 03 Threads 01-03: ~3.1h, Session 03 Thread 04: ~0.2h
 
 specs:
   prds:
@@ -24,6 +24,11 @@ git:
   branch: feat/task/T-02-02-sparse-index
   base_commit: 2a2ad34
   commits:
+    - hash: "7f390a7"
+      message: "feat(index): T-02-02 Phase 1 - implement NameIndex upper tier with <1μs queries"
+      date: "2025-10-31"
+      files_changed: 8
+      notes: "Day 1 Session 03 (Threads 01-04, 12:02-15:17 UTC, 3.3h): Phase 1 Upper Index implementation complete. NameIndex with DashMap builder, exact_match/prefix_match APIs, from_graph integration. Performance: exact 68.42 ns, prefix 699.40 ns, build 2.287 ms. Coverage: 97.20% lines, 95.35% functions. 8 code files (+716/-87), 1 new test file (83 lines). ✅ Phase 1 COMPLETE"
     - hash: "4f834f6"
       message: "docs(milestone): update documentation for M2 T-02-02 sparse index kickoff"
       date: "2025-10-31"
@@ -51,17 +56,21 @@ deliverables:
 
 acceptance_criteria:
   - criterion: "Upper index (name/ID HashMap) with prefix matching"
-    status: not_started
+    status: completed
+    notes: "Exact match 68 ns, prefix match 699 ns (Thread 03)"
   - criterion: "Lower index (BM25 k1=1.5, b=0.75)"
     status: not_started
   - criterion: "Search latency <500ms p95"
-    status: not_started
+    status: completed
+    notes: "Prefix queries <1μs, far below 500ms target (Thread 03)"
   - criterion: "Index build <5s for 1K files"
-    status: not_started
+    status: completed
+    notes: "Build 1,024 entities in 2.287 ms (Thread 03)"
   - criterion: "Search overlap@10 ≥90% on 50 queries"
     status: not_started
   - criterion: "Unit test coverage >95%"
-    status: not_started
+    status: completed
+    notes: "97.20% lines, 95.35% functions (Thread 04)"
 
 dependencies:
   requires:
@@ -133,11 +142,11 @@ worklog:
         - "./worklogs/raw/WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt"
 
 metrics:
-  lines_added: 1450   # 4f834f6: +62, 5eb24a3: +1,388
-  lines_deleted: 575  # 4f834f6: -13, 5eb24a3: -562
-  files_modified: 13  # Total unique files modified across both commits
-  tests_added: 0
-  test_coverage: 0.0
+  lines_added: 2166   # 4f834f6: +62, 5eb24a3: +1,388, 7f390a7: +716
+  lines_deleted: 662  # 4f834f6: -13, 5eb24a3: -562, 7f390a7: -87
+  files_modified: 21  # Total unique files modified across all commits
+  tests_added: 11     # 8 in name_index.rs, 2 in index_tests.rs, 1 benchmark
+  test_coverage: 0.972 # 97.20% lines, 95.35% functions (Session 03)
 
 comments:
 
