--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -24,6 +24,11 @@ git:
   branch: feat/task/T-02-02-sparse-index
   base_commit: 2a2ad34
   commits:
+    - hash: "7b624c4"
+      message: "checkpoint(worklog): T-02-02 Day 1 Session 03 complete - Phase 1 Upper Index delivered"
+      date: "2025-10-31"
+      files_changed: 5
+      notes: "Day 1 Session 03 checkpoint: Updated metadata.yaml (acceptance criteria, actual_hours 5.1h), RAW log complete (4 threads), created session-specific worklogs (S03-work-summary, S03-notes, S03-commit-log). Phase 1 COMPLETE: 4 acceptance criteria met (Upper index, Search latency, Index build, Coverage >95%). 5 artifact files (+1,232/-70)."
     - hash: "7f390a7"
       message: "feat(index): T-02-02 Phase 1 - implement NameIndex upper tier with <1μs queries"
       date: "2025-10-31"
@@ -109,15 +114,16 @@ notes: |
     * RAW: WORK-SESSIONS-02-THREADS-01-03-SUMMARY-2025-10-31.txt (Session 02 complete @ 10:55 UTC)
     * Status: ✅ COMPLETE (Phase 0 research baseline locked)
 
-  - Day 1 Session 03: [Phase 1] Upper Index Implementation (Threads 01-XX)
-    * Phase--Session: Executing Phase 1 (Upper Index) implementation
-    * Thread 01: NameIndex design & exact match (planned)
-    * Thread 02: Prefix match & type filtering (planned)
-    * Thread 03: Graph integration & benchmarks (planned)
-    * Expected: ~4-6 hours, name_index.rs + tests
-    * RAW: WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt (created at 11:33 UTC)
-    * Start Time: 11:33 UTC
-    * Status: 🚧 IN PROGRESS (Thread 01 pending start)
+  - Day 1 Session 03: [Phase 1] Upper Index Implementation (12:02-15:17 UTC, 3.3h) ✅ COMPLETE
+    * Thread 01 (12:02-12:13, 11min): Phase 1 kickoff & implementation planning
+    * Thread 02 (12:13-14:48, 2.6h): Upper Index core implementation + tests (exact_match, prefix_match, from_graph)
+    * Thread 03 (14:49-15:05, 16min): Validation & benchmarking (coverage 91.65%, performance measured)
+    * Thread 04 (15:14-15:17, 3min): Coverage hardening (97.20% lines, 95.35% functions)
+    * RAW: WORK-SESSIONS-03-THREADS-01-04-SUMMARY-2025-10-31.txt
+    * Commits: 7f390a7 (code), 7b624c4 (checkpoint)
+    * Deliverables: name_index.rs (+477), index_tests.rs (new, 83), search_bench.rs (+91)
+    * Performance: exact 68.42 ns, prefix 699.40 ns, build 2.287 ms (far exceeds targets)
+    * Status: ✅ COMPLETE - Phase 1 (Upper Index) fully delivered
 
   Technical risks:
   - Tokenization mismatch with LocAgent
@@ -132,19 +138,26 @@ notes: |
 worklog:
   base_path: ".artifacts/spec-tasks-T-02-02-sparse-index/worklogs/"
   entries:
-    - date: "2025-10-31"
-      summary: "worklogs/2025-10-31-work-summary.md" # Phase-Session Daily work summary
-      commits: "worklogs/2025-10-31-commit-log.md" # Phase-Session Commit log
-      notes: "worklogs/2025-10-31-notes.md" # Phase-Session Checkpoint Technical notes
+    - date: "2025-10-31-S01-S02"
+      session: "01&02"
+      summary: "worklogs/2025-10-31-S01-S02-work-summary.md" # Phase-Session Daily work summary
+      commits: "worklogs/2025-10-31-S01-S02-commit-log.md" # Phase-Session Commit log
+      notes: "worklogs/2025-10-31-S01-S02-notes.md" # Phase-Session Checkpoint Technical notes
       raw:
         - "./worklogs/raw/WORK-SESSIONS-01-THREADS-01-03-SUMMARY-2025-10-31.txt"
         - "./worklogs/raw/WORK-SESSIONS-02-THREADS-01-03-SUMMARY-2025-10-31.txt"
-        - "./worklogs/raw/WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt"
+    - date: "2025-10-31-S03"
+      session: "03"
+      summary: "worklogs/2025-10-31-S03-work-summary.md" # Phase-Session Daily work summary
+      commits: "worklogs/2025-10-31-S03-commit-log.md" # Phase-Session Commit log
+      notes: "worklogs/2025-10-31-S03-notes.md" # Phase-Session Checkpoint Technical notes
+      raw:
+        - "./worklogs/raw/WORK-SESSIONS-03-THREADS-01-04-SUMMARY-2025-10-31.txt"
 
 metrics:
-  lines_added: 2166   # 4f834f6: +62, 5eb24a3: +1,388, 7f390a7: +716
-  lines_deleted: 662  # 4f834f6: -13, 5eb24a3: -562, 7f390a7: -87
-  files_modified: 21  # Total unique files modified across all commits
+  lines_added: 3398   # 4f834f6: +62, 5eb24a3: +1,388, 7f390a7: +716, 7b624c4: +1,232
+  lines_deleted: 732  # 4f834f6: -13, 5eb24a3: -562, 7f390a7: -87, 7b624c4: -70
+  files_modified: 26  # Total unique files modified across all commits (code + artifacts)
   tests_added: 11     # 8 in name_index.rs, 2 in index_tests.rs, 1 benchmark
   test_coverage: 0.972 # 97.20% lines, 95.35% functions (Session 03)
 
