init(session): T-02-02 Day 2 Session 04 - Phase 2 Planning & Prep kickoff
Session 04 (Phase 2: Custom Tokenizer - Planning & Prep) initialized:
- Start: 01:39 UTC (2025-11-01)
- Status: IN PROGRESS (Thread 01 planning)

Session Objectives:
- Review refreshed metadata, specs, and task trackers for remaining Phase 2-5 scope
- Extract tokenizer requirements from LocAgent + PRD-02/06
- Document LocAgent tokenizer parity strategy (camel/snake split, stop words)
- Capture concrete TODO list for Phase 2 (Tokenizer) and Phase 3 (BM25) execution
- Identify research gaps and assign follow-up actions

Initialized Artifacts:
- metadata.yaml: Added Session 04 entry in work sessions and worklog tracking
- 2025-11-01-S04-work-summary.md: Session objectives and planning checklist
- 2025-11-01-S04-notes.md: Technical notes structure for Phase 2
- 2025-11-01-S04-commit-log.md: Git tracking initialized

RAW Log:
- WORK-SESSIONS-04-THREADS-01-0x-SUMMARY-2025-11-01.txt (pending Thread 01 completion)

Next: Begin Phase 2 planning thread to lock tokenizer/BM25 implementation roadmap

--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -7,9 +7,9 @@ task:
   owner: "Claude Code Agent + Rust Dev 2"
   status: in_progress
   start_date: "2025-10-31"
-  last_updated: 2025-10-31T15:17:00Z
+  last_updated: 2025-11-01T01:39:00Z
   estimated_hours: 32  # 4 days × 8 hours
-  actual_hours: 5.1  # Day 1 Session 01: 1.2h, Session 02 Threads 01-03: 0.6h, Session 03 Threads 01-03: ~3.1h, Session 03 Thread 04: ~0.2h
+  actual_hours: 5.1  # Day 1: Sessions 01-03 (5.1h total). Day 2 Session 04: pending
 
 specs:
   prds:
@@ -125,6 +125,13 @@ notes: |
     * Performance: exact 68.42 ns, prefix 699.40 ns, build 2.287 ms (far exceeds targets)
     * Status: ✅ COMPLETE - Phase 1 (Upper Index) fully delivered
 
+  - Day 2 Session 04: [Phase 2] Custom Tokenizer - Planning & Prep (01:39 UTC - TBD) 🚧 IN PROGRESS
+    * Thread 01 (01:39 UTC - TBD): Phase 2 Planning & Spec Alignment
+    * Objectives: Review specs, extract tokenizer requirements, lock Phase 2-3 plan, queue implementation threads
+    * RAW: WORK-SESSIONS-04-THREADS-01-0x-SUMMARY-2025-11-01.txt (Session 04 kickoff)
+    * Start Time: 01:39 UTC
+    * Status: 🚧 IN PROGRESS (Phase 2 planning)
+
   Technical risks:
   - Tokenization mismatch with LocAgent
   - BM25 parameter tuning for 90% overlap
@@ -153,6 +160,13 @@ worklog:
       notes: "worklogs/2025-10-31-S03-notes.md" # Phase-Session Checkpoint Technical notes
       raw:
         - "./worklogs/raw/WORK-SESSIONS-03-THREADS-01-04-SUMMARY-2025-10-31.txt"
+    - date: "2025-11-01-S04"
+      session: "04"
+      summary: "worklogs/2025-11-01-S04-work-summary.md" # Phase 2 Planning & Prep
+      commits: "worklogs/2025-11-01-S04-commit-log.md" # Phase 2 Commit log
+      notes: "worklogs/2025-11-01-S04-notes.md" # Phase 2 Technical notes
+      raw:
+        - "./worklogs/raw/WORK-SESSIONS-04-THREADS-01-0x-SUMMARY-2025-11-01.txt"
 
 metrics:
   lines_added: 3398   # 4f834f6: +62, 5eb24a3: +1,388, 7f390a7: +716, 7b624c4: +1,232
