--- a/crates/cds-index/Cargo.toml
+++ b/crates/cds-index/Cargo.toml
@@ -28,13 +28,15 @@ petgraph = { workspace = true }
 dashmap = { workspace = true }
 bincode = { workspace = true }
 rustpython-parser = { workspace = true }
+unicode-normalization = { workspace = true }
+rust-stemmers = { workspace = true }
+once_cell = { workspace = true }
 
 # Crate-specific dependencies
 config = "0.14"
 chrono = { version = "0.4", features = ["serde"] }
 walkdir = "2.4"
 rayon = "1.8"
-once_cell = "1.19"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 systemd = { version = "0.10", features = ["journal"] }
